@@ -46,9 +46,13 @@
 
         <dependency>
             <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service-annotations</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auto.service</groupId>
             <artifactId>auto-service</artifactId>
-            <version>1.0.1</version>
-            <optional>true</optional>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -142,6 +146,14 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.google.auto.service</groupId>
+                            <artifactId>auto-service</artifactId>
+                            <version>1.1.0</version>
+                        </path>
+                    </annotationProcessorPaths>
+
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <arg>--add-exports</arg>
@@ -200,7 +212,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
-                <configuration/>
+                <configuration>
+                    <argLine>@{argLine} --enable-preview</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
